<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="vm"
            type="com.noted.checktimeapp.add_activity.AddEventViewModel" />
        <import type="android.view.View"/>

        <variable
            name="eventContent"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:padding="10dp"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".add_activity.AddEventActivity">


        <androidx.appcompat.widget.Toolbar
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/add_tool_bar"
            android:background="@color/black_lite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="start"
                android:onClick="@{()->vm.setOnBackButtonClickListener()}"
                android:id="@+id/add_back_icon"
                android:contentDescription="@null"
                android:src="@drawable/back_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"/>


            <TextView
                android:id="@+id/add_title"
                android:text="@{vm.pageTitle}"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="@dimen/add_title_size"
                tools:text="2020/07/23"
                app:layout_constraintTop_toBottomOf="@+id/add_tool_bar_line"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </androidx.appcompat.widget.Toolbar>

        <View
            android:id="@+id/add_tool_bar_line"
            app:layout_constraintTop_toBottomOf="@id/add_tool_bar"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/add_notice"
            android:text="@string/today_event"
            app:layout_constraintTop_toBottomOf="@id/add_tool_bar_line"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/add_title_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:id="@+id/add_notice_land_line"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/add_notice"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/add_recycler_view"
            app:layout_constraintTop_toBottomOf="@id/add_notice_land_line"
            app:layout_constraintBottom_toBottomOf="@id/add_notice_land_line1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/add_no_data"
            app:layout_constraintTop_toBottomOf="@id/add_notice_land_line"
            app:layout_constraintBottom_toBottomOf="@id/add_notice_land_line1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/search_no_data"
            android:textColor="@color/white"
            android:visibility="@{vm.isShowNoData ? View.VISIBLE : View.GONE}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/add_time_notice"
            app:layout_constraintTop_toBottomOf="@id/add_event_notice"
            android:layout_marginTop="20dp"
            android:visibility="@{vm.isBeforeToday ? View.VISIBLE : View.GONE}"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/add_choice_time"
            android:textSize="@dimen/add_time_size"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/add_notice_land_line1"
            android:background="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_notice_land_line"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/add_event_notice"
            android:text="@string/add_event"
            android:visibility="@{vm.isBeforeToday ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/add_notice_land_line1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/add_title_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/add_btn_time"
            android:onClick="@{()-> vm.setOnTimePickerButtonClickListener()}"
            app:layout_constraintTop_toTopOf="@id/add_time_notice"
            app:layout_constraintBottom_toBottomOf="@id/add_time_notice"
            app:layout_constraintLeft_toRightOf="@id/add_time_notice"
            android:visibility="@{vm.isBeforeToday ? View.VISIBLE : View.GONE}"
            android:text="@string/press_me"
            android:background="@drawable/btn_selector"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/time_btn_height"/>

        <TextView
            app:layout_constraintTop_toTopOf="@id/add_btn_time"
            app:layout_constraintBottom_toBottomOf="@id/add_btn_time"
            app:layout_constraintLeft_toRightOf="@id/add_btn_time"
            android:layout_marginStart="10dp"
            android:id="@+id/add_time_info"
            android:textColor="@color/white"
            android:visibility="@{vm.isBeforeToday ? View.VISIBLE : View.GONE}"
            android:text="@{vm.totalTimeLiveData}"
            android:textSize="@dimen/add_time_size"
            tools:text="18:00PM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/add_event_notice_1"
            android:text="@string/do_something"
            android:textSize="@dimen/add_time_size"
            android:textColor="@color/white"
            android:visibility="@{vm.isBeforeToday ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/add_btn_time"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/add_event_edit"
            android:visibility="@{vm.isBeforeToday ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toTopOf="@id/add_event_notice_1"
            app:layout_constraintBottom_toBottomOf="@id/add_event_notice_1"
            app:layout_constraintLeft_toRightOf="@id/add_event_notice_1"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/enter_event"
            android:background="@drawable/btn_not_pressed"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_height"/>

        <TextView
            android:id="@+id/add_every_month_info"
            android:text="@string/every_month"
            android:textSize="@dimen/add_time_size"
            android:visibility="@{vm.isBeforeToday ? View.VISIBLE : View.GONE}"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/add_event_edit"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/add_yes_every_month_button"
            android:visibility="@{vm.isBeforeToday ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toTopOf="@id/add_every_month_info"
            app:layout_constraintBottom_toBottomOf="@id/add_every_month_info"
            app:layout_constraintLeft_toRightOf="@id/add_every_month_info"
            android:layout_marginStart="10dp"
            android:checked="false"
            android:buttonTint="@color/white"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/add_every_month_info_yes"
            android:visibility="@{vm.isBeforeToday ? View.VISIBLE : View.GONE}"
            android:text="@string/every_month_yes"
            app:layout_constraintTop_toTopOf="@id/add_every_month_info"
            app:layout_constraintBottom_toBottomOf="@id/add_every_month_info"
            app:layout_constraintLeft_toRightOf="@id/add_yes_every_month_button"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/add_time_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/add_yes_every_month_button_no"
            android:visibility="@{vm.isBeforeToday ? View.VISIBLE : View.GONE}"
            android:buttonTint="@color/white"
            android:checked="true"
            app:layout_constraintTop_toTopOf="@id/add_every_month_info"
            app:layout_constraintBottom_toBottomOf="@id/add_every_month_info"
            app:layout_constraintLeft_toRightOf="@id/add_every_month_info_yes"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/add_every_month_info_no"
            android:visibility="@{vm.isBeforeToday ? View.VISIBLE : View.GONE}"
            android:text="@string/every_month_no"
            app:layout_constraintTop_toTopOf="@id/add_every_month_info"
            app:layout_constraintBottom_toBottomOf="@id/add_every_month_info"
            app:layout_constraintLeft_toRightOf="@id/add_yes_every_month_button_no"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/add_time_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:visibility="@{vm.isBeforeToday ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/add_every_month_info"
            android:onClick="@{()->vm.setOnEventSaveButtonClickListener(eventContent)}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="15dp"
            android:text="@string/add"
            android:background="@drawable/btn_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
